# Automated_City_Traffic_Simulator

./: CMakeLists.txt  README.md
include/: CentralDispatchLogger copy.h  CityTrafficFacede.h  IIntersectionObserver.h  IVehicle.h  TrafficLight.h  VehicleFactory.h
src/: CentralDispatchLogger.cpp  CityTrafficFacade.cpp  TrafficLight.cpp  VehicleFactory.cpp  main.cpp
